feature: WEB UI for rules
